# overcome

./: README.md  TESTLIST.md  setup.cfg  setup.py
src/overcome/: analysis.py  overcome.py
src/overcome/calculator/: outcomeprofits.py
src/overcome/cposition/: cposition.py  cpositionlib.pyx  cprecisefactory.py
src/overcome/minimizer/: costminimizer.py  invalidminimization.py  regularcostminimizer.py
src/overcome/position/: basepositions.py  basicpositions.py  buying.py  cpositionlib.py  cpositionlib.pyx  evaluation.py  factory.py  position.py  positionlib.py  positions.py  precisefactory.py  selling.py
src/overcome/stack/: measuredstack.py  stack.py
src/stack/: stack.py
tests/features/: analyze.feature  costminimizer.feature  overcome.feature  positions.feature  positions.py  stack.feature
tests/features/steps/: analyze.py  common.py  costminimizer.py  overcome.py  overcomesteps.py  positions.py  stack.py
tests/integration/: test_overcome.py
tests/poc/: cstack.pyx  poc.ipynb
tests/samples/: few_live1m_histdata.csv
