[metadata]
name = overcome
version = 0.1.0
author = Jaume Mila Bea
author_email = jaume@westial.com
description = Overcome is a data transformer to calculate the potential buying and selling earnings from the "high", "low" and "close" trading history values.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/westial/overcome
project_urls =
    Bug Tracker = https://github.com/westial/overcome/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
python_requires = >=3.6.2

[options.extras_require]
dev = pandas; behave

[options.packages.find]
where = src