[metadata]
name = overcome
version = 0.4.0
author = Jaume Mila Bea
author_email = jaume@westial.com
description = Overcome is a data transformer to calculate the potential buying and selling earnings from the "high", "low" and "close" trading history values. Additional post operation analysis is provided.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/westial/overcome
project_urls =
    Bug Tracker = https://github.com/westial/overcome/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    pandas
python_requires = >=3.7.0

[options.extras_require]
dev = behave

[options.packages.find]
where = src